# pdfs-to-markdown

./: .gitignore  QUICK_START.md  README.md  USAGE_GUIDE.md  check_cuda.py  install_dependencies.py  main.py  pyproject.toml  requirements.txt  run.sh  setup.py
examples/: folder_structure_example.txt
src/: __init__.py  config.py  converter.py  utils.py
src/pdf_to_markdown/: __init__.py  orchestrator.py
src/pdf_to_markdown/data/: __init__.py  file_discovery.py
src/pdf_to_markdown/model/: __init__.py  result.py
src/pdf_to_markdown/transformers/: __init__.py  pdf_to_markdown.py
tests/: test_basic_functionality.py
