[tool.poetry]
name = "pdf-to-markdown-converter"
version = "2.1.0"
description = "A powerful PDF to Markdown converter using Docling"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
docling = ">=2.43.0"
python-dotenv = ">=1.0.0"
tqdm = ">=4.66.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
mypy = "^1.8.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
